--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=biblioteca
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_tf_biblioteca?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_tf_biblioteca
 spring.datasource.username=postgres
-spring.datasource.password=admin123
+spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-#spring.sql.init.mode=always
-#spring.jpa.defer-datasource-initialization=true
+
+
+logging.level.org.hibernate.SQL=DEBUG
