--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=biblioteca
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_tf_biblioteca
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=admin123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
