se realizo las validaciones en libro, usuario y se cambio la forma de envio en el form data en el registrar libro

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=biblioteca
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_tf_biblioteca
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_tf_biblioteca2
 spring.datasource.username=postgres
 spring.datasource.password=admin123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
